# Checkers

./: .gitignore  Checkers.cppcheck  CmakeLists.txt  README.md
CheckersEngine/: AIPlayer.cpp  CMakeLists.txt  CheckersBoard.cpp  CheckersBoard.h  CheckersBoardNode.h  Move.h  Piece.h  Pos.h
CheckersEngineTests/: AIPlayerTests.cpp  CMakeLists.txt  CheckersBoardTests.cpp  PosTests.cpp
